test: added FriendshipServiceTests and CommentServiceTests